# CMIP6-json-data-citation-generator

./: .coverage  .coveragerc  .gitattributes  .gitignore  .readthedocs.yml  .remarkrc  .stickler.yml  .travis.yml  CHANGELOG.rst  CMIP6.CMIP.IPSL.IPSL-CM6A-LR-marked-up.json  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  dev-requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
CMIP6_json_data_citation_generator/: __init__.py  generate_CMIP6_json_files.py  upload_CMIP6_json_files.py
CMIP6_json_data_citation_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dkrz_citation_api_client/: README.md  citation_client.py  citation_client_httplib2.py
docs/: cmip6_data_citation_generator.io_dcg.rst  cmip6_data_citation_generator.rst  cmip6_data_citation_generator.utils.rst  conf.py  development.rst  index.rst  io_dcg.rst  usage.rst  utils.rst
examples/outputs/: UoM-ssp119-1-1-0.json  UoM-ssp245-1-1-0.json  UoM-ssp370-1-1-0.json  UoM-ssp370lowntcf-1-1-0.json  UoM-ssp534os-1-1-0.json  UoM-ssp585-1-1-0.json  UoM_UoM-ssp119-1-1-0_input4MIPs.json  UoM_UoM-ssp245-1-1-0_input4MIPs_ScenarioMIP.json  UoM_UoM-ssp370-1-1-0_input4MIPs_ScenarioMIP.json  UoM_UoM-ssp534os-1-1-0_input4MIPs.json  (+2 more)
scripts/: example-generation.py  generate_CMIP6_json_files.py  make-test-dirs.py  test_install.py
tests/: conftest.py  test_CMIPPathHandler.py  test_generate_CMIP6_json_files.py  test_jsonGenerator.py  test_upload.py  utils.py
venv2/: pip-selfcheck.json
(+32 files in other folders)
