[metadata]
description-file = README.rst

[tool:pytest]
testpaths = tests

[versioneer]
VCS = git
style = pep440
versionfile_source = src/cmip6_data_citation_generator/_version.py
versionfile_build = cmip6_data_citation_generator/_version.py
tag_prefix = v
parentdir_prefix = cmip6-data-citation-generator-

[flake8]
max-line-length = 88
ignore = E203, E266, E501, W503
